[project]
name = "hemnet-search"
version = "0.1.0"
description = "Personal, local, zero-cost fuzzy + area-aware search over Hemnet listings"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "shapely>=2.0",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "playwright>=1.44",
]

[project.scripts]
hemnet-search = "hemnet_search.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hemnet_search*"]
